--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .container{
-	border: 2px;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .pagina-cabezado{
@@ -11,12 +11,16 @@
 	text-align: center;
 }
 
+#contenedor01{
+
+}
+
 #entrada-texto{
-	width: 500px;
+	width: 630px;
 }
 
 #caja-texto01{
-	width: 500px;
+	width: 630px;
 	height: 100px;
 }
 
@@ -26,7 +30,8 @@
 
 #tiempo-01{
 	width: 210px;
-	margin-left: 0%;
+	margin-left: -20;	
+	margin-right: 70%;
 }
 
 #espacio-lineas{
@@ -34,12 +39,8 @@
 }
 
 #part-01{
-	margin-left: 21%;
-	
-}
-
-#part-02{
-	margin-right: 19%;
+	margin-left: 20%;;
+	margin-right: 20%;	
 }
 
 #imagenPrevisualizacion{
@@ -49,12 +50,16 @@
 }
 
 #boton01{
-	position: relative;
-	left: 70%;
+	margin: auto;
 }
 
-#boton02{
-	position: relative;
-	right: -1%;
+#tabla01{
+	margin-left: 2%;
+	margin-right: 2%;
+}
+
+#ajustes{
+	width: 25px;
+	height: 25px;
 }
 
