se agrego la insersion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,11 +23,11 @@
 	width: 630px;
 	height: 100px;
 }
-
+/*
 #fecha-01{
 	width: 210px;	
 }
-
+*/
 #tiempo-01{
 	width: 210px;
 	margin-left: -20;	
